--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-notebook:
-    runs-on: ubuntu-latest  # You can use other runners like macos-latest or windows-latest
+    runs-on: windows-latest  # You can use other runners like macos-latest or windows-latest
 
     steps:
     - name: Checkout code
